# bng

./: .gitattributes  .gitignore  bootstrap.sh  build_swift_project.sh  gen_desktop_project.sh  gen_project.sh
.github/: pull_request_template.md
src/: CMakeLists.txt  vcpkg.json
src/bng_test/: bng_test.h
src/cmake/: commands.cmake  lib.cmake  options.cmake  platform_config.cmake  platform_init.cmake  target_common.cmake  target_exe.cmake  target_lib.cmake  test_macros.cmake  third_party.cmake  third_party_init.cmake
src/core/: CMakeLists.txt  core.h
src/core/3p/: glm.h
src/core/tests/: test_containers.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h  engineAIO.cpp
src/engine/tests/: engine.cpp  system.cpp
src/platform/: CMakeLists.txt
src/platform/desktop/: CMakeLists.txt
src/platform/desktop/linux/: CMakeLists.txt  main.cpp
src/platform/desktop/macos/: CMakeLists.txt
src/platform/desktop/windows/: main.cpp
src/platform/mobile/: CMakeLists.txt
src/render/: render.cpp  render.h
src/render/tests/: render.cpp  test_render.cpp
src/test_harness/: test_harness.h
